Add missing disqus support

--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -24,7 +24,7 @@
         </section>
     </footer>
 
-    <nav id="post-nav">
+    <nav id="post-nav" class="clearfix">
         {% if not page.isFirst %}
         <span class="prev">
             <a href="{{ page.nextSibling.url }}"><span class="arrow">←</span> {{ page.nextSibling.title }}</a>
