--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -7,7 +7,7 @@
             <h2 class="headline">{{ 'MONTHS_OF_THE_YEAR'|ta(page.date|date('n') - 1) }} {{ page.date|date("d, Y") }}</h2>
         </header>
         <section id="post-body">
-            {{ page.content }}
+            {{ page.content|raw }}
         </section>
     </article>
     <footer id="post-meta" class="clearfix">
